--- a/docker/Dockerfile.ml-api
+++ b/docker/Dockerfile.ml-api
@@ -11,7 +11,7 @@ RUN apt-get update && apt-get install -y \
 
 # Python dependencies
 COPY requirements.txt requirements-ml.txt ./
-RUN pip3 install --no-cache-dir -r requirements.txt -r requirements-ml.txt streamlit
+RUN pip3 install --no-cache-dir -r requirements.txt -r requirements-ml.txt
 
 # Application code
 COPY ml_core /app/ml_core
@@ -27,4 +27,4 @@ RUN mkdir -p /app/data/models/production \
 # Descargar COCO automáticamente en build (puedes comentar si no lo necesitas siempre)
 # RUN python3 /app/scripts/download_coco_dataset.py
 
-CMD streamlit run /app/scripts/conversational_dashboard.py --server.port 80 --server.headless true
+CMD python dashboard_gradio.py --server.port 80 --server.name 0.0.0.0
